Openmeetings 2077 group css (#24)
* [OPENMEETINGS-2077] external type is moved to the group (tests are broken)

* [OPENMEETINGS-2077] tests seems to be fixed